--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "db:undo": "npx sequelize-cli db:migrate:undo"
   },
   "keywords": [],
   "author": "",
@@ -13,16 +16,16 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "3.0.3",
-    "cookie-parser": "1.4.7",
+    "cookie-parser": "^1.4.7",
     "dotenv": "17.2.3",
     "express": "5.1.0",
-    "jsonwebtoken": "9.0.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "8.16.3",
     "pg-hstore": "2.3.4",
     "sequelize": "6.37.7"
   },
   "devDependencies": {
     "nodemon": "3.1.11",
-    "sequelize-cli": "6.6.3"
+    "sequelize-cli": "^6.6.3"
   }
 }
