--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "8.16.3",
     "pg-hstore": "2.3.4",
-    "sequelize": "6.37.7"
+    "sequelize": "6.37.7",
+    "supertest": "^7.1.4"
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "3.1.11",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "6.6.3"
   }
 }
