--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "3.0.3",
-    "cookie-parser": "^1.4.7",
+    "cookie-parser": "1.4.7",
     "dotenv": "17.2.3",
     "express": "5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "9.0.2",
     "pg": "8.16.3",
     "pg-hstore": "2.3.4",
     "sequelize": "6.37.7",
-    "supertest": "^7.1.4"
+    "supertest": "7.1.4"
   },
   "devDependencies": {
-    "jest": "^30.2.0",
+    "jest": "30.2.0",
     "nodemon": "3.1.11",
     "sequelize-cli": "6.6.3"
   }
